Fixes “jumping” UI when date selected
Previously when a date was selected the “clear selection” button has styles which caused a small “jump” in the layout of the info area when it appeared. Fixed so that the core styles match those of the default info text to avoid any jumping in the UI when dates are selected.

--- a/client/components/date-range/style.scss
+++ b/client/components/date-range/style.scss
@@ -87,9 +87,14 @@
 		margin-bottom: 0.5em;
 	}
 	
+	// Match "naked" button and text styles
+	// to avoid small jumps in UI on date select
 	&,
 	.button {
+		padding: 0;
 		font-size: 12px;
+    	font-weight: 500;
+    	line-height: 18px;
 	}
 
 	.button {
